part2/2.06/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-pong-without-volume
  namespace: random-pong
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 2345
      - path: /random
        backend:
          serviceName: random-svc
          servicePort: 2346
